==> dannyf00/xDuino/board_msp430.c <==
#include "xduino.h"						//use xduino generic defs
#include "board_msp430.h"				//we use board-specific defs
#define TAxCTL				TA2CTL			//timera control
#define TAxR				TA2R			//timer / counter
#define TAxIV				TA2IV			//interrupt flag
#define TAxEX0				TA2EX0			//expansion register
#define TAxCCTL0			TA2CCTL0		//timer2 compare control
#define TAxCCTL1			TA2CCTL1		//timer2 c0mpare control
#define TAxCCTL2			TA2CCTL2		//timer2 compare control
#define TAxCCTL3			TA2CCTL3		//timer2 compare control
#define TAxCCTL4			TA2CCTL4		//timer2 c0mpare control
#define TAxCCTL5			TA2CCTL5		//timer2 compare control
#define TAxCCTL6			TA2CCTL6		//timer2 compare control
#define TAxCCR0				TA2CCR0			//timer2 compare register
#define TAxCCR1				TA2CCR1			//timer2 compare register
#define TAxCCR2				TA2CCR2			//timer2 compare register
#define TAxCCR3				TA2CCR3			//timer2 compare register
#define TAxCCR4				TA2CCR4			//timer2 compare register
#define TAxCCR5				TA2CCR5			//timer2 compare register
#define TAxCCR6				TA2CCR6			//timer2 compare register

void mcu_init(void) {
  	// Stop watchdog timer to prevent time out reset
  	WDTCTL = WDTPW + WDTHOLD;
  	PM5CTL0 &=~LOCKLPM5;           				// Disable the GPIO power-on default high-impedance mode

   	//initialize the ports to GPIO
#if defined(P1IN)
   	P1SEL0 = P1SEL1 = 0x00;						//all pins digital
#endif
#if defined(P2IN)
   	P2SEL0 = P2SEL1 = 0x00;						//all pins digital
#endif
#if defined(P3IN)
   	P3SEL0 = P3SEL1 = 0x00;						//all pins digital
#endif
#if defined(P4IN)
   	P4SEL0 = P4SEL1 = 0x00;						//all pins digital
#endif
#if defined(P5IN)
   	P5SEL0 = P5SEL1 = 0x00;						//all pins digital
#endif
#if defined(P6IN)
   	P6SEL0 = P6SEL1 = 0x00;						//all pins digital
#endif
#if defined(P7IN)
   	P7SEL0 = P7SEL1 = 0x00;						//all pins digital
#endif
#if defined(P8IN)
   	P8SEL0 = P8SEL1 = 0x00;						//all pins digital
#endif
#if defined(P9IN)
   	P9SEL0 = P9SEL1 = 0x00;						//all pins digital
#endif

	//initialize timera2 (16-bit), 1:1 prescaler, overflow interrupt enabled
	//stop the timer
	//clear the timer control register
	TAxCTL |= TACLR;							//TxCTL_bit.TACLR;						//set to reset timer a

	//stop timer
	//TxCTL &=~MC_0;							//TxCTL_bit.TAMC = 0x00;				//timer mode - 0x00: halted, 0x01: up mode, 0x02: continuous mode (to 0xffff), 0x03: up/down
	//TxCTL |= TASSEL_2;						//TxCTL_bit.TASSEL = 0x02;				//timer source - 0x00: TACLK, 0x01: ACLK, 0x02: SMCLK, 0x03: INCLK
	//TxCTL |= (ps & ID_3);						//TxCTL_bit.TAID = ps & 0x03;			//input divider - 0x00: /1, 0x01: /2, 0x02: /4, 0x03: /8
	//TxCTL |= OUTMOD0;							//set output mode to zero
	TAxR = 0;									//reset the timer counter
	TAxCTL = 	TASSEL_2 |						//0=TACLK, 1=ACLK, 2=SMCLK, and 3=INCLK
				//ID__1 |							//prescaler: ID__1/2/4/8: 1/2/4/8x
				MC_2 |							//0=stop, 1=up to ccr0, 2=continous mode, 3=up and down
				0x00;							//TCIE disabled
#if defined(TAxEX0)
	TAxEX0 = 0x00;								//(ps & TMRA_EX8x);	//set expansion divider
#endif
	TAxCTL &=~TAIFG;								//TxCTL_bit.TAIFG = 0;					//interrupt flag: 0= no interrupt pending; 1=interrupt pending
	TAxCTL |= TAIE;								//TxCTL_bit.TAIE = 0;					//timer a interrupt enable: 0: interrupt disabled; 1: interrupt enabled;
	TAxCTL|= ID__1;								//prescaler: ID__1/2/4/8: 1/2/4/8x
	//timer0 is running now
	ei();										//enable interrupts globally
}

void pinMode(PIN_T pin, uint8_t mode) {
	volatile uint8_t *ddr, *port;
	uint8_t mask;

	if (pin>=DMAX) return;								//invalid pin -> do nothing
	ddr=GPIO_PinDef[pin].DDR;							//get gpio address
	port=GPIO_PinDef[pin].PORT;
	mask=GPIO_PinDef[pin].mask;
	switch (mode) {
		case OUTPUT:		IO_OUT(*ddr, mask); break;
		case INPUT_PULLUP:	IO_IN(*ddr, mask); IO_SET(*port, mask); break;	//not exactly
		case INPUT:
		default:			IO_IN(*ddr, mask); break;
	}
}
